<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardElevation="5dp"
    app:cardCornerRadius="@dimen/_5sdp"
    android:orientation="vertical"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/dastur_haqida"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:paddingTop="10dp"
            android:text="@string/about_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/version_1_0_ntelegram_dribbblxr"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>