<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SwitchLanguageActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/back_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:strokeColor="@color/cardview_light_background"
        app:strokeWidth="2dp">

        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/back" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/uzbek_card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:strokeColor="@color/cardview_light_background"
        app:strokeWidth="2dp">

        <LinearLayout
            android:id="@+id/uzbek_layout"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/autour_one"
                android:text="@string/uzbek"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/english_card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:strokeColor="@color/cardview_light_background"
        app:strokeWidth="2dp">

        <LinearLayout
            android:id="@+id/english_layout"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/autour_one"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/autour_one"
        android:text="@string/save"
        app:backgroundTint="@color/blueLine"
        app:cornerRadius="@dimen/_5sdp" />

</LinearLayout>